--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -111,7 +111,7 @@ input, select, textarea {
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		font-weight: 300;
+		font-weight: 500;
 		color: #666;
 		line-height: 1.5em;
 	}
@@ -1747,22 +1747,26 @@ input, select, textarea {
 	.image {
 		display: inline-block;
 		border: 0;
+		margin: 0 auto;
 	}
 
 		.image img {
 			display: block;
 			width: 100%;
+			float: left;
 		}
 
 		.image.avatar48 {
-			width: 55px;
-			height: 55px;
-			background: #f00;
+			width: 150px;
+			height: 150px;
+			border-radius: 50%;
 		}
 
 			.image.avatar48 img {
-				width: 55px;
-				height: 55px;
+				width: 220px;
+				height: 220px;
+				display: block;
+   				margin: 0 auto; /* This will horizontally center the image */
 			}
 
 		.image.fit {
@@ -1783,11 +1787,11 @@ input, select, textarea {
 
 		.image.centered {
 			display: block;
-			margin: 0 0 2em 0;
+    		margin: 0 auto; /* This will horizontally center the image */
 		}
 
 			.image.centered img {
-				margin: 0 auto;
+				margin: 0 2em 2em 0;
 				width: auto;
 			}
 
@@ -2099,13 +2103,14 @@ input, select, textarea {
 		margin: 1.75em 1.5em 1.5em 1.5em;
 		min-height: 48px;
 		cursor: default;
+		text-align: center;
 	}
 
 		#logo h1 {
 			position: relative;
 			color: #fff;
 			font-weight: 600;
-			font-size: 1em;
+			font-size: 1.5em;
 			line-height: 1em;
 		}
 
@@ -2304,7 +2309,7 @@ input, select, textarea {
 			}
 
 			#main section.cover {
-				padding: 5em 0;
+				padding: 2.5em 0;
 			}
 
 	}
@@ -2440,7 +2445,6 @@ input, select, textarea {
 				top: 0;
 				width: 275px;
 				z-index: 10002;
-				width: 275px;
 				background: #222729 url("images/overlay.png");
 				box-shadow: inset -0.25em 0 0.25em 0 rgba(0, 0, 0, 0.125);
 			}
