--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -166,6 +166,12 @@ html {
 	box-sizing: border-box;
 }
 
+html {
+	scroll-snap-type: y mandatory;
+	overflow-y: scroll;
+	scroll-behavior: smooth;
+}
+
 *,
 *:before,
 *:after {
@@ -179,6 +185,10 @@ body {
 	font-weight: 300;
 	line-height: 1.75em;
 	color: #888;
+	scroll-snap-type: y mandatory;
+	scroll-behavior: smooth;
+	transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1);
+	transition-duration: 0.5s;
 }
 
 body.is-preload *,
@@ -235,7 +245,7 @@ h6 a strong {
 }
 
 h2 {
-	font-size: 2em;
+	font-size: 2.5em;
 	letter-spacing: -1px;
 }
 
@@ -277,7 +287,7 @@ i {
 a {
 	text-decoration: none;
 	color: inherit;
-	border-bottom: dotted 1px rgba(128, 128, 128, 0.5);
+	/* border-bottom: dotted 1px rgba(128, 128, 128, 0.5); */
 	-moz-transition: color 0.35s ease-in-out, border-bottom-color 0.35s ease-in-out;
 	-webkit-transition: color 0.35s ease-in-out, border-bottom-color 0.35s ease-in-out;
 	-ms-transition: color 0.35s ease-in-out, border-bottom-color 0.35s ease-in-out;
@@ -285,7 +295,7 @@ a {
 	outline: 0;
 }
 
-a:hover {
+#a:hover {
 	color: #E27689;
 	border-bottom-color: rgba(255, 255, 255, 0);
 }
@@ -328,9 +338,13 @@ br.clear {
 /* Container */
 
 .container {
-	margin: 0 auto;
+	/* margin: 0 auto;
 	max-width: 100%;
-	width: 1400px;
+	width: 1400px; */
+	width: 100%;
+	max-width: 1400px;
+	margin: 0 auto;
+	/* padding: 2rem; */
 }
 
 @media screen and (min-width: 961px) and (max-width: 1880px) {
@@ -435,7 +449,7 @@ br.clear {
 }
 
 .row>.col-3 {
-	width: 25%;
+	width: 33.33%;
 }
 
 .row>.off-3 {
@@ -443,7 +457,7 @@ br.clear {
 }
 
 .row>.col-4 {
-	width: 33.33333%;
+	width: 33.33%;
 }
 
 .row>.off-4 {
@@ -451,7 +465,7 @@ br.clear {
 }
 
 .row>.col-5 {
-	width: 41.66667%;
+	width: 33.33%;
 }
 
 .row>.off-5 {
@@ -571,7 +585,8 @@ br.clear {
 }
 
 .row>* {
-	padding: 40px 0 0 40px;
+	padding: 20px 0 0 20px;
+	/* padding: 0; */
 }
 
 .row.gtr-uniform {
@@ -615,6 +630,45 @@ br.clear {
 .row.gtr-200.gtr-uniform>* {
 	padding-top: 80px;
 }
+
+.about-grid {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 1.5rem;
+	padding: 2rem 0;
+	max-width: 1400px;
+	margin: 0 auto;
+}
+
+.about-grid>div {
+	background: rgba(255, 255, 255, 0.05);
+	padding: 1rem;
+	border-radius: 10px;
+	transition: transform 0.3s ease;
+	height: 100%;
+}
+
+.about-grid>div:hover {
+	transform: translateY(-5px);
+	background: rgba(255, 255, 255, 0.08);
+}
+
+.about-grid h3 {
+	font-size: 2rem;
+	margin-bottom: 1rem;
+	color: #e27689;
+}
+
+.about-grid h3 i {
+	margin-right: 0.5rem;
+}
+
+.about-grid p {
+	font-size: 1.3rem;
+	line-height: 1.5;
+	margin: 0;
+}
+
 
 @media screen and (min-width: 961px) and (max-width: 1880px) {
 
@@ -678,7 +732,7 @@ br.clear {
 	}
 
 	.row>.col-3-wide {
-		width: 25%;
+		width: 33.33%;
 	}
 
 	.row>.off-3-wide {
@@ -686,7 +740,7 @@ br.clear {
 	}
 
 	.row>.col-4-wide {
-		width: 33.33333%;
+		width: 33.33%;
 	}
 
 	.row>.off-4-wide {
@@ -694,7 +748,7 @@ br.clear {
 	}
 
 	.row>.col-5-wide {
-		width: 41.66667%;
+		width: 33.33%;
 	}
 
 	.row>.off-5-wide {
@@ -814,7 +868,8 @@ br.clear {
 	}
 
 	.row>* {
-		padding: 40px 0 0 40px;
+		padding: 20px 0 0 20px;
+		/* padding: 0; */
 	}
 
 	.row.gtr-uniform {
@@ -923,7 +978,7 @@ br.clear {
 	}
 
 	.row>.col-3-normal {
-		width: 25%;
+		width: 33.33%;
 	}
 
 	.row>.off-3-normal {
@@ -931,7 +986,7 @@ br.clear {
 	}
 
 	.row>.col-4-normal {
-		width: 33.33333%;
+		width: 33.33%;
 	}
 
 	.row>.off-4-normal {
@@ -939,7 +994,7 @@ br.clear {
 	}
 
 	.row>.col-5-normal {
-		width: 41.66667%;
+		width: 33.33%;
 	}
 
 	.row>.off-5-normal {
@@ -1059,7 +1114,8 @@ br.clear {
 	}
 
 	.row>* {
-		padding: 40px 0 0 40px;
+		padding: 20px 0 0 20px;
+		/* padding: 0; */
 	}
 
 	.row.gtr-uniform {
@@ -1168,7 +1224,7 @@ br.clear {
 	}
 
 	.row>.col-3-narrow {
-		width: 25%;
+		width: 33.33%;
 	}
 
 	.row>.off-3-narrow {
@@ -1176,7 +1232,7 @@ br.clear {
 	}
 
 	.row>.col-4-narrow {
-		width: 33.33333%;
+		width: 33.33%;
 	}
 
 	.row>.off-4-narrow {
@@ -1184,7 +1240,7 @@ br.clear {
 	}
 
 	.row>.col-5-narrow {
-		width: 41.66667%;
+		width: 33.33%;
 	}
 
 	.row>.off-5-narrow {
@@ -1413,7 +1469,7 @@ br.clear {
 	}
 
 	.row>.col-3-narrower {
-		width: 25%;
+		width: 33.33%;
 	}
 
 	.row>.off-3-narrower {
@@ -1421,7 +1477,7 @@ br.clear {
 	}
 
 	.row>.col-4-narrower {
-		width: 33.33333%;
+		width: 33.33%;
 	}
 
 	.row>.off-4-narrower {
@@ -1429,7 +1485,7 @@ br.clear {
 	}
 
 	.row>.col-5-narrower {
-		width: 41.66667%;
+		width: 33.33%;
 	}
 
 	.row>.off-5-narrower {
@@ -1594,6 +1650,15 @@ br.clear {
 		padding-top: 40px;
 	}
 
+	.about-grid {
+		grid-template-columns: repeat(1, 1fr);
+		padding: 1rem 0;
+	}
+
+	.about-grid>div {
+		padding: 1.25rem;
+	}
+
 }
 
 @media screen and (max-width: 736px) {
@@ -1658,7 +1723,7 @@ br.clear {
 	}
 
 	.row>.col-3-mobile {
-		width: 25%;
+		width: 33.33%;
 	}
 
 	.row>.off-3-mobile {
@@ -1666,7 +1731,7 @@ br.clear {
 	}
 
 	.row>.col-4-mobile {
-		width: 33.33333%;
+		width: 33.33%;
 	}
 
 	.row>.off-4-mobile {
@@ -1674,7 +1739,7 @@ br.clear {
 	}
 
 	.row>.col-5-mobile {
-		width: 41.66667%;
+		width: 33.33%;
 	}
 
 	.row>.off-5-mobile {
@@ -1876,7 +1941,7 @@ article:last-child {
 .image img {
 	display: block;
 	width: 100%;
-	float: left;
+	/* float: left; */
 }
 
 .image.avatar48 {
@@ -1893,9 +1958,25 @@ article:last-child {
 	/* This will horizontally center the image */
 }
 
-.image.fit {
+/* .image.fit {
 	display: block;
 	width: 100%;
+} */
+
+.image.fit {
+	display: block;
+	width: 125%;
+	margin-left: -10%;
+	/* This compensates for the extra width to keep it centered */
+	max-width: 125%;
+}
+
+/* Add a parent container style if needed */
+.image.fit-container {
+	position: relative;
+	width: 100%;
+	overflow: hidden;
+	/* This prevents horizontal scrolling */
 }
 
 .image.featured {
@@ -1905,7 +1986,7 @@ article:last-child {
 }
 
 .image.left {
-	float: left;
+	/* float: left; */
 	margin: 0 2em 2em 0;
 }
 
@@ -1956,7 +2037,7 @@ ul.icons li {
 ul.icons a {
 	display: inline-block;
 	width: 2em;
-	height: 2em;
+	height: 3em;
 	line-height: 2em;
 	text-align: center;
 	border: 0;
@@ -2077,7 +2158,7 @@ button,
 	color: #fff !important;
 	text-decoration: none;
 	padding: 0.75em 2.5em 0.75em 2.5em;
-	background-color: #8ebebc;
+	background-color: #e27689;
 	border: 0;
 	cursor: pointer;
 	background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15)), url("images/overlay.png");
@@ -2095,7 +2176,7 @@ input[type="submit"]:hover,
 input[type="reset"]:hover,
 button:hover,
 .button:hover {
-	background-color: #9ececc;
+	background-color: #e27689;
 }
 
 input[type="button"]:active,
@@ -2103,14 +2184,14 @@ input[type="submit"]:active,
 input[type="reset"]:active,
 button:active,
 .button:active {
-	background-color: #7eaeac;
+	background-color: #e27689;
 }
 
 /* Item */
 
 .item {
 	box-shadow: 0 0.05em 0.15em 0 rgba(0, 0, 0, 0.05);
-	margin-bottom: 40px;
+	margin-bottom: 20px;
 }
 
 .item header {
@@ -2184,7 +2265,7 @@ button:active,
 	position: fixed;
 	text-align: right;
 	top: 0;
-	width: 375px;
+	width: 350px;
 }
 
 #header .top {
@@ -2199,7 +2280,7 @@ button:active,
 	-webkit-flex-shrink: 0;
 	-ms-flex-shrink: 0;
 	flex-shrink: 0;
-	padding: 1.5em 0 0.75em 0;
+	padding: 1.5em 0 0.25em 0;
 }
 
 #header .bottom> :last-child {
@@ -2207,7 +2288,7 @@ button:active,
 }
 
 #header .icons {
-	font-size: 0.8em;
+	font-size: 1.25em;
 	text-align: center;
 }
 
@@ -2220,7 +2301,24 @@ button:active,
 }
 
 #header .icons a:hover {
-	color: #fff;
+	color: #e27689;
+}
+
+#navlogo .icons {
+	font-size: 1.25em;
+	text-align: center;
+}
+
+#navlogo .icons a {
+	color: #41484c;
+	-moz-transition: color 0.35s ease-in-out;
+	-webkit-transition: color 0.35s ease-in-out;
+	-ms-transition: color 0.35s ease-in-out;
+	transition: color 0.35s ease-in-out;
+}
+
+#navlogo .icons a:hover {
+	color: #e27689;
 }
 
 #logo {
@@ -2233,15 +2331,17 @@ button:active,
 
 #logo h1 {
 	color: #fff;
-	font-weight: 600;
+	font-weight: 500;
 	font-size: 1.5em;
 	line-height: 1em;
+	padding-bottom: 10px;
 }
 
 #logo h5 {
-	font-size: 0.8em;
+	font-size: 1em;
 	color: rgba(255, 255, 255, 0.5);
 	line-height: 1.25em;
+	/* padding-top: 5px; */
 }
 
 #logo p {
@@ -2271,7 +2371,7 @@ button:active,
 
 #nav ul li a {
 	display: block;
-	padding: 0.5em 1.5em 0.5em 1.5em;
+	padding: 0.5em 2em 0.5em 2em;
 	color: rgba(255, 255, 255, 0.5);
 	text-decoration: none;
 	outline: 0;
@@ -2285,7 +2385,9 @@ button:active,
 #nav ul li a span {
 	position: relative;
 	display: block;
-	font-size: 0.8em;
+	font-size: 1em;
+	font-weight: 300;
+	padding: 10 10 10 10;
 }
 
 #nav ul li a span:before {
@@ -2293,7 +2395,7 @@ button:active,
 	left: 0;
 	color: #41484c;
 	text-align: center;
-	width: 1.25em;
+	width: 1em;
 	line-height: 1.75em;
 }
 
@@ -2310,10 +2412,10 @@ button:active,
 /* Footer */
 
 #footer {
-	margin-left: 375px;
+	margin-left: 350px;
 	text-align: center;
 	background-color: #dce3e2;
-	padding: 3em 0 4em 0;
+	padding: 0 0 0 0;
 	box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
 	font-size: 0.8em;
 }
@@ -2340,13 +2442,20 @@ button:active,
 /* Main */
 
 #main {
-	margin-left: 375px;
+	margin-left: 350px;
 }
 
 #main>section {
+	min-height: 100vh;
+	scroll-snap-align: start;
+	scroll-snap-stop: always;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	padding: 0;
+	transition: all 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
 	margin: 0;
 	overflow: hidden;
-	padding: 4em 0;
 	box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
 	text-align: center;
 	background-image: url("images/overlay.png");
@@ -2356,6 +2465,7 @@ button:active,
 	color: #ddd;
 	color: rgba(255, 255, 255, 0.75);
 }
+
 
 #main>section.dark h2,
 #main>section.dark h3,
@@ -2377,6 +2487,36 @@ button:active,
 
 #main>section.dark a:hover {
 	border-bottom-color: rgba(255, 255, 255, 0);
+	color: #e27689;
+}
+
+#main>section.port {
+	color: #ddd;
+	color: rgba(255, 255, 255, 0.75);
+	background-position: center;
+}
+
+
+#main>section.port h2,
+#main>section.port h3,
+#main>section.port h4,
+#main>section.port h5,
+#main>section.port h6 {
+	color: inherit;
+}
+
+#main>section.port strong {
+	color: #fff;
+	border-color: inherit;
+}
+
+#main>section.port a {
+	color: #fff;
+	border-color: inherit;
+}
+
+#main>section.port a:hover {
+	border-bottom-color: rgba(255, 255, 255, 0);
 }
 
 #main>section.cover {
@@ -2386,12 +2526,13 @@ button:active,
 }
 
 #main>section.one {
-	background-color: #81918E;
-	background-image: url("../../images/banner.jpg");
+	background-color: #dcdcdc;
+	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../images/home.jpg");
 }
 
 #main>section.two {
-	background-color: #f5fafa;
+	background-color: #81918E;
+	background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../../images/about.jpg");
 }
 
 #main>section.three {
@@ -2403,8 +2544,46 @@ button:active,
 }
 
 #main>section.five {
-	background-color: #dcdcdc;
+	background-color: #f5fafa;
+	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../images/portfolio.jpg");
 }
+
+#portfolio h3 {
+	background: linear-gradient(to right, rgba(226, 118, 137, 0.1), rgba(226, 118, 137, 0.2));
+	padding: 10px 15px;
+	border-left: 4px solid #e27689;
+	margin-bottom: 15px;
+	transition: transform 0.3s ease;
+}
+
+#portfolio h3:hover {
+	transform: translateY(-5px);
+	background: linear-gradient(to right, rgba(226, 118, 137, 0.2), rgba(226, 118, 137, 0.3));
+	;
+}
+
+#portfolio article {
+	background: rgba(255, 255, 255, 0.05);
+	padding: 0 0 0 20px;
+	transition: transform 0.3s ease;
+	text-align: left;
+}
+
+#portfolio article:hover {
+	transform: translateY(-5px);
+	background: rgba(255, 255, 255, 0.08);
+}
+
+#portfolio a {
+	color: inherit;
+	transition: color 0.3s ease;
+}
+
+#portfolio .col-12-mobile a:hover {
+	color: #e27689 !important;
+}
+
+
 /* Wide */
 
 @media screen and (min-width: 961px) and (max-width: 1880px) {
@@ -2421,19 +2600,19 @@ button:active,
 	/* Header */
 
 	#header {
-		width: 300px;
+		width: 350px;
 	}
 
 	/* Footer */
 
 	#footer {
-		margin-left: 300px;
+		margin-left: 350px;
 	}
 
 	/* Main */
 
 	#main {
-		margin-left: 300px;
+		margin-left: 350px;
 	}
 
 }
@@ -2445,11 +2624,14 @@ button:active,
 	/* Main */
 
 	#main>section {
-		padding: 3em 0;
+		/* padding: 3em 0; */
+		min-height: 100vh;
+		padding: 0;
 	}
 
 	#main section.cover {
-		padding: 2.5em 0;
+		/* padding: 2.5em 0; */
+		padding: 0;
 	}
 
 }
@@ -2568,32 +2750,9 @@ button:active,
 		font-size: 1.25em;
 	}
 
-	/* Header */
-
-	#header {
-		-moz-backface-visibility: hidden;
-		-webkit-backface-visibility: hidden;
-		-ms-backface-visibility: hidden;
-		backface-visibility: hidden;
-		-moz-transform: translateX(-275px);
-		-webkit-transform: translateX(-275px);
-		-ms-transform: translateX(-275px);
-		transform: translateX(-275px);
-		-moz-transition: -moz-transform 0.5s ease;
-		-webkit-transition: -webkit-transform 0.5s ease;
-		-ms-transition: -ms-transform 0.5s ease;
-		transition: transform 0.5s ease;
-		-webkit-overflow-scrolling: touch;
-		display: block;
-		height: 100%;
-		left: 0;
-		overflow-y: auto;
-		position: fixed;
-		top: 0;
-		width: 275px;
-		z-index: 10002;
-		background: #222729 url("images/overlay.png");
-		box-shadow: inset -0.25em 0 0.25em 0 rgba(0, 0, 0, 0.125);
+	#header .menu-toggle {
+		display: none;
+		/* Hide menu toggle button on larger screens */
 	}
 
 	#header .top {
@@ -2699,7 +2858,7 @@ button:active,
 	/* Footer */
 
 	#footer {
-		margin-left: 0;
+		margin-left: 350px;
 	}
 
 	/* Main */
@@ -2714,11 +2873,14 @@ button:active,
 		-ms-transition: -ms-transform 0.5s ease;
 		transition: transform 0.5s ease;
 		padding-bottom: 1px;
-		margin-left: 0;
+		/* margin-left: 0; */
+		margin-left: 350px;
 	}
 
 	#main>section {
-		padding: 3em 0;
+		/* padding: 3em 0; */
+		min-height: 100vh;
+		padding: 0;
 	}
 
 	#main section.cover {
@@ -2760,7 +2922,9 @@ button:active,
 	/* Main */
 
 	#main>section {
-		padding: 2em 0;
+		/* padding: 2em 0; */
+		min-height: 100vh;
+		padding: 0;
 	}
 
 	#main section.cover {
@@ -2784,5 +2948,6 @@ button:active,
 	#footer .copyright li:first-child {
 		margin-top: 0;
 	}
+
 
 }
