--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2412,7 +2412,7 @@ button:active,
 /* Footer */
 
 #footer {
-	margin-left: 350px;
+	/* margin-left: 350px; */
 	text-align: center;
 	background-color: #dce3e2;
 	padding: 0 0 0 0;
@@ -2607,7 +2607,7 @@ button:active,
 	/* Footer */
 
 	#footer {
-		margin-left: 350px;
+		margin-left: 20%;
 	}
 
 	/* Main */
@@ -2751,6 +2751,17 @@ button:active,
 		font-size: 1.25em;
 	}
 
+	#header {
+		width: 275px;
+		height: 100%;
+		position: fixed;
+		z-index: 10000;
+		left: -275px;
+		top: 0;
+		background: #1c1c1c;
+		transition: left 0.5s ease;
+	}
+
 	#header .menu-toggle {
 		display: none;
 		/* Hide menu toggle button on larger screens */
@@ -2787,16 +2798,16 @@ button:active,
 		transition: transform 0.5s ease;
 		display: block;
 		height: 2.25em;
-		left: 0;
+		left: 0.75em;
 		position: fixed;
-		top: 0;
+		top: 0.75em;
 		width: 3.25em;
 		z-index: 10001;
 	}
 
 	#headerToggle .toggle {
 		text-decoration: none;
-		position: absolute;
+		position: relative;
 		left: 0;
 		top: 0;
 		width: 100%;
@@ -2847,6 +2858,7 @@ button:active,
 		-webkit-transform: translateX(275px);
 		-ms-transform: translateX(275px);
 		transform: translateX(275px);
+		position: initial;
 	}
 
 	body.header-visible #header {
@@ -2854,12 +2866,13 @@ button:active,
 		-webkit-transform: translateX(0);
 		-ms-transform: translateX(0);
 		transform: translateX(0);
+		left: 0;
 	}
 
 	/* Footer */
 
 	#footer {
-		margin-left: 350px;
+		text-align: center;
 	}
 
 	/* Main */
@@ -2874,14 +2887,17 @@ button:active,
 		-ms-transition: -ms-transform 0.5s ease;
 		transition: transform 0.5s ease;
 		padding-bottom: 1px;
-		/* margin-left: 0; */
-		margin-left: 350px;
+		margin-left: 0;
+		padding: 0;
+		min-height: 100vh;
 	}
 
 	#main>section {
 		/* padding: 3em 0; */
 		min-height: 100vh;
 		padding: 0;
+		display: flex;
+		flex-direction: column;
 	}
 
 	#main section.cover {
@@ -2923,9 +2939,8 @@ button:active,
 	/* Main */
 
 	#main>section {
-		/* padding: 2em 0; */
+		padding: 2em 0;
 		min-height: 100vh;
-		padding: 0;
 	}
 
 	#main section.cover {
@@ -2948,6 +2963,16 @@ button:active,
 
 	#footer .copyright li:first-child {
 		margin-top: 0;
+	}
+
+	#header {
+		width: 100%;
+		left: -100%;
+	}
+
+	#headerToggle {
+		top: 0.5em;
+		left: 0.5em;
 	}
 
 
