--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2337,11 +2337,17 @@ button:active,
 	padding-bottom: 10px;
 }
 
-#logo h5 {
+#logo h3 {
+	font-size: 1.25em;
+	color: rgba(255, 255, 255, 0.5);
+	line-height: 1.25em;
+	padding-bottom: 5px;
+}
+
+#logo h4 {
 	font-size: 1em;
 	color: rgba(255, 255, 255, 0.5);
 	line-height: 1.25em;
-	/* padding-top: 5px; */
 }
 
 #logo p {
