--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -181,9 +181,9 @@ html {
 body {
 	background: #fff;
 	font-family: 'Source Sans Pro', sans-serif;
-	font-size: 19pt;
+	font-size: 10pt;
 	font-weight: 300;
-	line-height: 1.75em;
+	line-height: 1.6em;
 	color: #888;
 	scroll-snap-type: y mandatory;
 	scroll-behavior: smooth;
@@ -208,9 +208,9 @@ input,
 textarea,
 select {
 	font-family: 'Source Sans Pro', sans-serif;
-	font-size: 19pt;
+	font-size: 10pt;
 	font-weight: 300;
-	line-height: 1.75em;
+	line-height: 1.5em;
 	color: #888;
 }
 
@@ -222,7 +222,7 @@ h5,
 h6 {
 	font-weight: 500;
 	color: #666;
-	line-height: 1.5em;
+	line-height: 1.3em;
 }
 
 h1 a,
@@ -2158,7 +2158,7 @@ button,
 	color: #fff !important;
 	text-decoration: none;
 	padding: 0.75em 2.5em 0.75em 2.5em;
-	background-color: #e27689;
+	background-color: #F4C430;
 	border: 0;
 	cursor: pointer;
 	background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15)), url("images/overlay.png");
@@ -2275,6 +2275,16 @@ button:active,
 	flex-grow: 1;
 }
 
+#header a {
+	color: #F4C430;
+	border-color: inherit;
+}
+
+#header a:hover {
+	color: #e27689;
+	border-bottom-color: rgba(255, 255, 255, 0);
+}
+
 #header .bottom {
 	-moz-flex-shrink: 0;
 	-webkit-flex-shrink: 0;
@@ -2388,6 +2398,10 @@ button:active,
 	transition: none;
 }
 
+#nav ul li a:hover {
+	color: #e27689;
+}
+
 #nav ul li a span {
 	position: relative;
 	display: block;
@@ -2486,13 +2500,21 @@ button:active,
 	border-color: inherit;
 }
 
-#main>section.dark a {
-	color: #fff;
+#main>section.dark p a {
+	color: #F4C430;
 	border-color: inherit;
 }
 
-#main>section.dark a:hover {
+#main>section.dark p a:hover {
 	border-bottom-color: rgba(255, 255, 255, 0);
+	color: #e27689;
+}
+
+#main>section.dark .icons a {
+	color: #fff;
+}
+
+#main>section.dark .icons a:hover {
 	color: #e27689;
 }
 
